--- a/package.json
+++ b/package.json
@@ -36,8 +36,7 @@
     ]
   },
   "devDependencies": {
-    "node-sass": "^7.0.3",
-    "sass": "^1.56.0",
-    "sass-loader": "^13.1.0"
+    "sass": "^1.56.0"
+
   }
 }
